--- a/samples/photo_album_with_jquery/index.html
+++ b/samples/photo_album_with_jquery/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="photoAlbumApp">
 <head>
+  <base href="/">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Photo Album</title>
     <link type="text/css" rel="stylesheet" media="all" href="css/app.css">
@@ -32,14 +33,6 @@
   <!-- cloudinary angular plugin -->
 <!--TODO-->
   <!--<script src="/node_modules/angular-cloudinary/angular-cloudinary.js"></script>-->
-
-
-   <!--application code 
-  <script src="js/app.js"></script>
-  <script src="js/config.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/services.js"></script>-->
 </head>
 <body>
   <div id="logo">
