--- a/samples/photo_album_with_jquery/index.html
+++ b/samples/photo_album_with_jquery/index.html
@@ -6,7 +6,7 @@
   <title>Photo Album</title>
     <link type="text/css" rel="stylesheet" media="all" href="app/css/app.css">
     <link rel="shortcut icon"
-          cl_href="http://cloudinary.com/favicon.png" type="fetch" effect="sepia"/>
+          attr.cl-href="http://cloudinary.com/favicon.png" type="fetch" effect="sepia"/>
 
   <link rel="stylesheet" href="app/css/app.css">
   <link rel="stylesheet" href="app/css/animations.css">
