--- a/samples/photo_album_with_jquery/index.html
+++ b/samples/photo_album_with_jquery/index.html
@@ -4,7 +4,7 @@
 <head>
 	<base href="/">
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" cl-href="http://cloudinary.com/favicon.png" type="fetch" effect="sepia" />
+	<link rel="shortcut icon" clHref="http://cloudinary.com/favicon.png" type="fetch" effect="sepia" />
 	<title>Photo Album</title>
 
 	<link type="text/css" rel="stylesheet" media="all" href="app/css/app.css">
